test: cover Markdown save failures and stabilize cross-platform export verification